# flask_microblog_project

./: .dockerignore  .env.example  .flake8  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  main.py  requirements.txt  seed.sql
backend/alembic/: env.py
backend/api/: likes.py  media.py  tweets.py  users.py
backend/core/: auth.py  config.py  db.py  swagger.py
backend/models/: follow.py  like.py  media.py  tweet.py  user.py
backend/services/: follows.py  likes.py  media.py  tweets.py  users.py
backend/tests/: conftest.py  test.db  test_auth.py  test_follows.py  test_likes.py  test_media.py  test_tweets.py
backend/utils/: responses.py  serializers.py
frontend/: Dockerfile
nginx/: nginx.conf
